--- a/perfiles/src/app/tab1/tab1.page.scss
+++ b/perfiles/src/app/tab1/tab1.page.scss
@@ -2,7 +2,7 @@
 
 // Estilos generales para la página Tab1
 page-tab1 {
-  body {
+  ion-content {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #b85464;
     margin: 0;
