--- a/perfiles/src/app/tab2/tab2.page.html
+++ b/perfiles/src/app/tab2/tab2.page.html
@@ -1,17 +1,216 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-app>
+  
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title> Nicole Motoche</ion-title>
+      <ion-progress-bar [value]="progress"></ion-progress-bar>
+
+      <!-- Botones para dispositivos pequeños -->
+      <ion-row class="ion-hide-md-and-up ion-hide-lg-and-up">
+        <ion-col size="4">
+          <ion-button href="#experiencia" expand="full">Experiencia</ion-button>
+        </ion-col>
+        <ion-col size="4">
+          <ion-button href="#proyectos" expand="full">Proyectos</ion-button>
+        </ion-col>
+        <ion-col size="4">
+          <ion-button href="https://github.com/nicolemotoche29" target="_blank" rel="noreferer" expand="full">GitHub</ion-button>
+        </ion-col>
+      </ion-row>
     </ion-toolbar>
   </ion-header>
+  
+  
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
-</ion-content>
+  <ion-content (ionScroll) = "onScroll($event)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <p>Soy estudiante de la carrera de <strong>Tecnologia Superior en Desarrollo de Software</strong> en la  Escuela Politécnica Nacional</p>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h2 id="experiencia">Experiencia</h2>
+
+          <ion-list>
+            <ion-item class="list-item">
+              <ion-label>Cooperativa de Ahorra y Credito Occidental - 2023</ion-label>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Bomberos Rumiñahui - 2019</ion-label>
+            </ion-item>
+
+          </ion-list>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-img title="Foto de presentación Nicole Motoche" alt="Foto de prerfil" src="assets/images/Presentación_Nicole.jpeg" class="profile-image"></ion-img>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h2 id="proyectos">Proyectos realizados</h2>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Aplicación movil con <strong>IONIC</strong></ion-card-title>
+            </ion-card-header>
+
+            <ion-card-content>
+              <p>Creacion de un Chatbot </p>
+              <p>Tecnologías utilizadas: HTML, CSS, JavaScript</p> 
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h2 id="proyectos">Preguntas frecuentes</h2>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-list>
+            <ion-item>
+              <ion-grid>
+                <ion-label>¿Qué estudios tienes?</ion-label>
+              </ion-grid>
+              
+              <ion-note>
+                <p>Actualmente soy estudiante en la Escuela Politécnica Nacional me encuentro cursando el último semestre en la carrera Tecnología Superior en Desarrollo de Software</p>
+              </ion-note>
+              <ion-note>
+                <p>Me gradue en Bachillerato en CIencias en la Unidad Educativa Juan de Salinas</p>
+              </ion-note>
+              
+            </ion-item>
+
+            <ion-item>
+              <ion-grid>
+                <ion-label>¿Cuáles son tus habilidades?</ion-label>
+              </ion-grid>
+              
+              <ion-note>
+                <ul>
+                  <li>Trabajo en grupo</li>
+                  <li>Paciencia</li>
+                  <li>Pensamiento critico</li>
+                  <li>Creatividad</li>
+                  
+                </ul>
+              </ion-note>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h2>Formulario de contacto</h2>
+          <form method="post" action="/">
+            <fieldset>
+                <legend>Información personal</legend>
+
+                <ion-list>
+                  <ion-item>
+                    <ion-label position="stacked">Nombre</ion-label>
+                    <ion-input 
+                    [(ngModel)]="nombre"
+                    placeholder="Diego Salazar"
+                    maxlength="40"
+                    required
+                    ></ion-input>
+                  </ion-item>
+
+                  <ion-item>
+                    <ion-label position="stacked">Correo</ion-label>
+                    <ion-input 
+                    [(ngModel)] = "email"
+                    placeholder="diego.salazar@epn.edu.ec"
+                    maxlength="50"
+                    required
+                    ></ion-input>
+                  </ion-item>
+                </ion-list>
+            </fieldset>
+
+            <fieldset>
+                <legend>Información adicional</legend>
+
+                <ion-list>
+                  <ion-item>
+                    <ion-label position="stacked">Teléfono</ion-label>
+                    <ion-input
+                      placeholder="0969076628"
+                      [(ngModel)]="Telefono"
+                      maxlength="10"
+                      required
+                    ></ion-input>
+                  </ion-item>
+                  
+                </ion-list>
+            </fieldset>
+
+            <fieldset>
+                <legend>Otros</legend>
+
+                <ion-list>
+                  <ion-item>
+                    <ion-select label="¿Por qué quieres contactar?" label-placement="floating">
+                      <ion-select-option value="1">Trabajo</ion-select-option>
+                      <ion-select-option value="2">Duda</ion-select-option>
+                      <ion-select-option value="4">Más Información</ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                </ion-list>
+                
+                <ion-list>
+                  <ion-item>
+                    <ion-select label="Con que necesitas ayuda?" placeholder="Lenguajes">
+                      <ion-select-option value="JavaScript">JavaScript</ion-select-option>
+                      <ion-select-option value="Python">Python</ion-select-option>
+                      <ion-select-option value="React">React</ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                </ion-list>
+
+                <ion-label>
+                  <h1>Fecha disponible</h1>
+                </ion-label>
+                <ion-datetime display-format="DD/MM/YYYY" min="{{minDate}}"></ion-datetime>
+                
+            </fieldset>
+
+            <ion-button id="present-alert">Envíame un correo</ion-button>
+            <ion-alert
+              trigger="present-alert"
+              header="Contactame a:"
+              subHeader="aidenperse@gmail.com"
+              message="Espero que tengas un buen día"
+              [buttons]="alertButtons"
+            ></ion-alert>
+            
+        </form>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+
+  <ion-footer>
+    <ion-toolbar>
+      
+    </ion-toolbar>
+  </ion-footer>
+</ion-app>
